Updating SASS buttons

--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
             </div>
         </div>
         <hr>
+
+        <!-- CONTACT -->
         <div class="contact-me">
             <h2 class="contact-header">Get In Touch</h2>
             <h3>Lorem ipsum dolor sit amet, non elit.</h3>
             <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+            <a class="btn-green" href="mailto:name@email.com">CONTACT ME</a>
         </div>
     </div>
 
